Finishing up with weather app

--- a/style/style.css
+++ b/style/style.css
@@ -22,3 +22,12 @@ td, th {
 svg {
 	height: 150px;
 }
+
+.input-group {
+	padding-bottom: 20px;
+}
+
+td:first-of-type, td:first-of-type > div {
+	height: 200px;
+	width: 250px;
+}
